--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "awilix": "^12.0.5",
     "aws-sdk": "^2.980.0",
-    "axios": "^0.24.0",
+    "axios": "^1.8.4",
     "axios-retry": "^4.5.0",
     "bcrypt": "^5.0.1",
     "bull": "^4.16.5",
@@ -37,10 +37,10 @@
     "express-validator": "^7.2.1",
     "helmet": "^4.6.0",
     "joi": "^17.13.3",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.2",
     "marked": "^9.1.6",
     "morgan": "^1.10.0",
-    "multer": "^1.4.3",
+    "multer": "^1.4.5-lts.2",
     "pdf-parse": "^1.1.1",
     "pg": "^8.7.1",
     "prom-client": "^14.0.1",
@@ -50,12 +50,13 @@
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6",
     "uuid": "^8.3.2",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
-    "jest": "^27.5.1",
-    "nodemon": "^2.0.12",
+    "eslint": "^9.23.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.9",
     "sequelize-cli": "^6.2.0",
     "supertest": "^6.3.4"
   }
